<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="4dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/homeSearchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="4dp"
        android:hint="@string/looking_for_some_show"
        app:layout_constraintEnd_toStartOf="@id/searchButton"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/homeSearchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homeSearchEditText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/popularSectionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shows"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/homeSearchEditText"
        app:layout_constraintTop_toBottomOf="@+id/homeSearchEditText" />

    <ProgressBar
        android:id="@+id/homeProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allShowsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/searchButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/popularSectionTextView"
        app:layout_constraintTop_toBottomOf="@+id/popularSectionTextView"
        app:layout_constraintVertical_bias="0.0"
        app:spanCount="2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/customMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="custom message"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tryAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/try_again"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/customMessageTextView"
        app:layout_constraintStart_toStartOf="@+id/customMessageTextView"
        app:layout_constraintTop_toBottomOf="@+id/customMessageTextView"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToAllShowsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_all_shows"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/allShowsRecyclerView"
        app:layout_constraintStart_toStartOf="@+id/allShowsRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>


